--- a/style/style.css
+++ b/style/style.css
@@ -98,17 +98,6 @@ footer {
   color: black;
 }
 
-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-
-footer {
-  margin-top: 64px;
-}
-
 .logo {
   width: 66px;
 }
@@ -535,8 +524,60 @@ form input, form textarea, form select {
   border-bottom: 2px solid #666;
 }
 
-i {
-  margin: 0 16px;
+footer > div > ul {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px 70px;
+  text-align: center;
+}
+
+footer > div > ul > li {
+  padding: 5px;
+  text-transform: uppercase;
+}
+
+.link-f {
+  color: rgb(114, 114, 114);
+  font-family: Shentox, sans-serif;
+}
+
+.footer-top {
+  background-color: rgb(32, 32, 32);
+  text-align: center;
+}
+
+.footer-bottom {
+  height: 97px;
+  display: flex;
+  background-color: black;
+  color: #aaa;
+}
+
+.footer-wrapper {
+  margin: auto;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.icon-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 21px;
+}
+
+.icon-f {
+  background-color: #aaa;
+  border-radius: 50%;
+  padding: 12px;
+  margin: 0;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+}
+
+ul {
+  text-align: center;
+  margin: auto;
 }
 
 /*  ***********************
