--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,4 @@
 /* GENERAL SETUP */
-
 html, body, button, input, textarea {
   font-family: ARS Maquette, "Helvetica Neue", Arial, sans-serif;
 }
@@ -43,7 +42,7 @@ ul {
 .display-bottom {
   position: absolute;
   left: 0;
-  bottom: 0
+  bottom: 0;
 }
 
 .standalone-logo {
@@ -68,7 +67,7 @@ ul {
   padding: 16px;
 }
 
-.hamburger>div {
+.hamburger > div {
   width: 20px;
   height: 2px;
   background-color: red;
@@ -534,40 +533,6 @@ footer>div>ul>li {
   color: white;
 }
 
-/* .footer-logo {
-  height: 9px;
-  display: inline-block;
-}
-
-.footer-links li {
-  color: rgb(114, 114, 114);
-  font-family: Shentox, sans-serif;
-  text-transform: uppercase;
-} */
-
-/* .footer-top {
-  background-color: rgb(32, 32, 32);
-  padding: 20px 0;
-}
-
-.footer-bottom {
-  background-color: black;
-  padding: 20px;
-  color: #aaa;
-}
-
-.footer-bottom span {
-  display: inline-block;
-}
-
-.footer-wrapper {
-  margin: auto;
-  flex-wrap: wrap;
-  text-align: center;
-} */
-
-/* FOOTER */
-
 .footer-links {
   width: 100%;
   height: 161px;
@@ -626,14 +591,14 @@ footer>div>ul>li {
   box-sizing: border-box;
 }
 
-.footer-about>span {
+.footer-about > span {
   display: block;
   box-sizing: border-box;
   width: 100%;
   height: 19px;
 }
 
-.footer-about>span>a>img {
+.footer-about > span > a>img {
   height: 9px;
 }
 
@@ -663,6 +628,7 @@ footer>div>ul>li {
 
 .float-left {
   float: left;
+  padding: 16px;
 }
 
 .fund-icon {
@@ -672,17 +638,74 @@ footer>div>ul>li {
 
 .target {
   margin: 0;
+  font: bold 18px 'Lexend', sans-serif;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.pad-left > h4 {
+  margin: 0;
+  margin-block-end: 0;
+  margin-block-start: 0;
+  font: 11px 'Inconsolata', monospace;
+  opacity: 0.7;
 }
 
 .pad-left {
   line-height: 28px;
-  padding-left: 60px;
+  padding: 10px 16px 10px 84px;
+  background-color: #ffebe7;
+  color: black;
 }
 
 .show-md {
   display: none;
 }
 
+.ringover {
+  background-color: #ff4422;
+  color: #fff;
+  padding: 10px 16px 10px 84px;
+  box-sizing: border-box;
+}
+
+.grid-container {
+  padding: 0 20px;
+}
+
+.grid-bottom-icons {
+  padding: 16px;
+}
+
+.icon-description {
+  font: 13px 'Lexend', sans-serif;
+}
+
+.header-container {
+  color: #ff4422;
+  margin-bottom: 24px;
+}
+
+.header-container > h1 {
+  font: bold 28px 'Yanone Kaffeesatz', sans-serif;
+}
+
+.header-container > ul > li {
+  margin-top: 11px;
+}
+
+.bottom-caption {
+  padding: 10px 16px 16px;
+  border-top: 1px solid #ffdfd9;
+  font: bold 12px 'Lexend', sans-serif;
+  color: rgb(141, 141, 141);
+}
+
+.bottom-caption > a > span {
+  color: rgb(190, 190, 190);
+  font: 12px 'Lexend', sans-serif;
+}
 /*  ***********************
         MEDIA QUERIES
     *********************** */
