--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 /* GENERAL SETUP */
 
-html, body, button, input, textarea {
+html {
   font-family: ARS Maquette, "Helvetica Neue", Arial, sans-serif;
 }
 
@@ -34,12 +34,6 @@ ul {
   background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 1)), url(binoculars-looking-at-ocean.jpg);
 }
 
-.display-top {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
 .display-bottom {
   position: absolute;
   left: 0;
@@ -71,7 +65,7 @@ ul {
   padding: 16px;
 }
 
-.hamburger>div {
+.hamburger > div {
   width: 20px;
   height: 2px;
   background-color: red;
@@ -213,13 +207,6 @@ ul {
   align-items: center;
 }
 
-.btn {
-  background-color: #567b95;
-  border: 0;
-  padding: 8px;
-  color: #fff;
-}
-
 .light-text {
   color: #999;
 }
@@ -271,30 +258,6 @@ li {
   margin: 0;
 }
 
-.social {
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-}
-
-.editor-picks span {
-  padding-left: 7px;
-}
-
-.editor-picks li {
-  padding-top: 7px;
-}
-
-.blah {
-  background: #ccc;
-  padding: 9px;
-  border-radius: 50%;
-}
-
-.text-end {
-  text-align: right;
-}
-
 .border-bottom {
   border-bottom: 1px solid #ccc;
 }
@@ -307,14 +270,6 @@ li {
   padding: 24px 0;
 }
 
-.most-popular li {
-  font-family: georgia, "times new roman", times, serif;
-  color: #000;
-  padding: 16px 0;
-  border-top: 1px solid rgb(226, 226, 226);
-  border-bottom: 1px solid rgb(226, 226, 226);
-}
-
 .fs-2 {
   font-size: 2.5rem;
 }
@@ -322,11 +277,6 @@ li {
 .fs-italic {
   font-style: italic;
 }
-
-/* ul {
-  padding: 0;
-  margin: 0;
-} */
 
 .container {
   padding: 0 32px;
@@ -346,15 +296,18 @@ iframe {
   height: 315px;
 }
 
-.display-top {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  background-color: #fff;
-}
-
 .card-title {
   font-weight: 700;
+  font-size: 20px;
+  line-height: 35px;
+  margin-bottom: 5px;
+}
+
+.card-title2 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 16px;
+  margin-bottom: 5px;
 }
 
 .card-icon {
@@ -394,26 +347,13 @@ aside {
   position: inherit;
 }
 
-/* .bg-img {
-  height: 150px;
-} */
-
 a {
   text-decoration: none;
 }
 
-.small-links {
-  color: #666;
-  border-top: 1px solid #ebebeb;
-  padding: 16px 0;
-  margin-top: 8px;
-}
-
-footer .grid a {
-  text-decoration: none;
-  font-size: 14px;
-  color: #000;
-  line-height: 16px;
+.footer-info > a {
+  color: #aaa;
+  margin: 0 2px;
 }
 
 footer a:hover {
@@ -434,7 +374,7 @@ footer h3 {
   font-size: 14.25px;
 }
 
-.caption, #caption {
+.caption {
   font-size: 0.9375rem;
   line-height: 1.25rem;
   margin-left: 7px;
@@ -458,63 +398,17 @@ footer h3 {
   font-size: 1.25rem;
 }
 
-.theory-sect p {
-  font-size: 0.875rem;
-  color: #666;
-}
-
-.theory-sect p span {
-  font-size: 11px;
-  font-weight: bold;
-  color: #000;
-}
-
-#credit {
-  font-size: 0.875rem;
-  color: #000;
-}
-
-.width-20 {
-  width: 90px;
-}
-
 .card {
   padding: 8px;
   border: 1px solid #000;
-}
-
-#small-link-footer li a {
-  color: #666;
-  font-size: 11px;
-  line-height: 21px;
 }
 
 .bold {
   font-weight: 700;
 }
 
-.more-sect p {
-  font-family: georgia, "times new roman", times, serif;
-}
-
-.editor-picks img {
-  width: 80px;
-}
-
-form input, form textarea, form select {
-  padding: 16px;
-  border: 0;
-  border-bottom: 2px solid #666;
-}
-
-footer>div>ul>li {
+footer > div > ul > li {
   padding: 5px;
-}
-
-.footer-links {
-  padding: 20px 16px;
-  flex-wrap: wrap;
-  justify-content: center;
 }
 
 .header-links {
@@ -529,7 +423,8 @@ footer>div>ul>li {
   white-space: nowrap;
 }
 
-.space li, .post-header * {
+.space li,
+.post-header * {
   padding: 0 16px;
 }
 
@@ -545,9 +440,11 @@ footer>div>ul>li {
   margin: auto;
   border-bottom: 1px solid #333;
   box-sizing: border-box;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.footer-social>ul {
+.footer-social > ul {
   display: flex;
   flex-wrap: wrap;
   padding-inline-start: 0;
@@ -557,16 +454,22 @@ footer>div>ul>li {
   justify-content: center;
 }
 
+.footer-social > ul > li {
+  margin: 3px;
+}
+
 .social {
   color: #fff;
   height: 40px;
-  width: 40px;
   border-radius: 50%;
   padding: 12px;
   margin: 0 3px;
   text-align: center;
   background-color: #333;
   box-sizing: border-box;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .footer-info {
@@ -574,11 +477,6 @@ footer>div>ul>li {
   text-transform: uppercase;
   text-align: center;
   flex-wrap: nowrap;
-}
-
-.footer-info>a {
-  color: #aaa;
-  margin: 0 2px;
 }
 
 .footer-about {
@@ -589,20 +487,14 @@ footer>div>ul>li {
   font: 13px ARS Maquette, Helvetica Neue, Arial, sans-serif;
   color: #aaa;
   justify-content: center;
-  /* display: flex; */
-  /* flex-wrap: wrap; */
   background-color: black;
-  /* box-sizing: border-box; */
 }
 
 .footer-about span {
   display: inline-block;
-  /* box-sizing: border-box;
-  width: 100%;
-  height: 19px; */
 }
 
-.footer-about>span>a>img {
+.footer-about > span > a > img {
   height: 9px;
 }
 
@@ -648,7 +540,7 @@ footer>div>ul>li {
   overflow: hidden;
 }
 
-.pad-left>h4 {
+.pad-left > h4 {
   margin: 0;
   margin-block-end: 0;
   margin-block-start: 0;
@@ -672,7 +564,7 @@ footer>div>ul>li {
 }
 
 .ringover {
-  background-color: #ff4422;
+  background-color: #ff4322;
   color: #fff;
   padding: 10px 16px 10px 84px;
   box-sizing: border-box;
@@ -691,15 +583,15 @@ footer>div>ul>li {
 }
 
 .header-container {
-  color: #ff4422;
+  color: #ff4322;
   margin-bottom: 24px;
 }
 
-.header-container>h1 {
+.header-container > h1 {
   font: bold 28px 'Yanone Kaffeesatz', sans-serif;
 }
 
-.header-container>ul>li {
+.header-container > ul > li {
   margin-top: 11px;
 }
 
@@ -710,9 +602,14 @@ footer>div>ul>li {
   color: rgb(141, 141, 141);
 }
 
-.bottom-caption>a>span {
+.bottom-caption > a > span {
   color: rgb(190, 190, 190);
   font: 12px 'Lexend', sans-serif;
+}
+
+.main-article-date {
+  color: white;
+  opacity: 0.8;
 }
 
 /*  ***********************
@@ -723,26 +620,46 @@ footer>div>ul>li {
   .col-30x70 {
     grid-template-columns: 70% 30%;
   }
+
   .col-70x30-md {
     grid-template-columns: 70% 30%;
   }
+
   .col-3-md {
     grid-template-columns: auto auto auto;
     column-gap: 16px;
     row-gap: 16px;
   }
+
   .show-md {
     display: block;
   }
+
   .hide-md {
     display: none;
   }
+
   .header-clearance {
     margin-top: 112px;
   }
+
   .standalone {
     margin: 0;
     height: 378px;
+  }
+
+  .card-title {
+    font-weight: 700;
+    font-size: 40px;
+    margin-bottom: 15px;
+    font-family: 'Hammersmith One', sans-serif;
+  }
+
+  .card-title2 {
+    font-weight: 700;
+    font-size: 20px;
+    margin-bottom: 7px;
+    font-family: 'Hammersmith One', sans-serif;
   }
 }
 
@@ -750,6 +667,7 @@ footer>div>ul>li {
   .show-lg {
     display: block;
   }
+
   .col-4-lg {
     grid-template-columns: auto auto auto auto;
     column-gap: 16px;
@@ -760,6 +678,22 @@ footer>div>ul>li {
   }
 
   .bg-img {
-    background-image: linear-gradient(to bottom, rgba(255, 0, 0, .48), rgba(0, 0, 0, 1)), url(binoculars-looking-at-ocean.jpg);
+    background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.48), rgba(0, 0, 0, 1)), url(binoculars-looking-at-ocean.jpg);
+  }
+
+  .card-title {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 60px;
+  }
+
+  .card-title2 {
+    font-weight: 700;
+    line-height: 25px;
+    font-size: 28px;
+  }
+
+  .main-article-date {
+    color: white;
   }
 }
