--- a/style/style.css
+++ b/style/style.css
@@ -627,6 +627,24 @@ footer > div > ul > li {
   padding: 0 16px;
 }
 
+.hard-fork {
+  display: block;
+}
+
+.latest-fork {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.img-latest-fork {
+  height: 96px;
+  width: 96px;
+}
+
+.img-fork-main {
+  width: 100%;
+}
 /*  ***********************
         MEDIA QUERIES
     *********************** */
