--- a/style/style.css
+++ b/style/style.css
@@ -52,6 +52,7 @@ ul {
 .gap-row-lg {
   row-gap: 32px;
 }
+
 .gap-column-md {
   column-gap: 16px;
 }
@@ -73,7 +74,7 @@ ul {
   padding: 16px;
 }
 
-.hamburger > div {
+.hamburger>div {
   width: 20px;
   height: 2px;
   background-color: red;
@@ -133,7 +134,16 @@ ul {
   row-gap: 16px;
 }
 
-.flex-dir-row {
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.list-item {
+  display: flex;
   flex-direction: row;
 }
 
@@ -286,10 +296,6 @@ li {
   font-style: italic;
 }
 
-.container {
-  padding: 0 32px;
-}
-
 .content {
   max-width: 900px;
   margin: 0 auto;
@@ -359,7 +365,7 @@ a {
   text-decoration: none;
 }
 
-.footer-info > a {
+.footer-info>a {
   color: #aaa;
   margin: 0 2px;
 }
@@ -415,7 +421,7 @@ footer h3 {
   font-weight: 700;
 }
 
-footer > div > ul > li {
+footer>div>ul>li {
   padding: 5px;
 }
 
@@ -431,8 +437,7 @@ footer > div > ul > li {
   white-space: nowrap;
 }
 
-.space li,
-.post-header * {
+.space li, .post-header * {
   padding: 0 16px;
 }
 
@@ -452,7 +457,7 @@ footer > div > ul > li {
   justify-content: center;
 }
 
-.footer-social > ul {
+.footer-social>ul {
   display: flex;
   flex-wrap: wrap;
   padding-inline-start: 0;
@@ -462,7 +467,7 @@ footer > div > ul > li {
   justify-content: center;
 }
 
-.footer-social > ul > li {
+.footer-social>ul>li {
   margin: 3px;
 }
 
@@ -502,7 +507,7 @@ footer > div > ul > li {
   display: inline-block;
 }
 
-.footer-about > span > a > img {
+.footer-about>span>a>img {
   height: 9px;
 }
 
@@ -548,7 +553,7 @@ footer > div > ul > li {
   overflow: hidden;
 }
 
-.pad-left > h4 {
+.pad-left>h4 {
   margin: 0;
   margin-block-end: 0;
   margin-block-start: 0;
@@ -569,6 +574,16 @@ footer > div > ul > li {
 
 .hide-sm {
   display: none;
+}
+
+.strike {
+  text-decoration: line-through;
+  display: inline;
+}
+
+.new-price {
+  font-size: 20px;
+  display: inline;
 }
 
 .ringover {
@@ -595,11 +610,11 @@ footer > div > ul > li {
   margin-bottom: 24px;
 }
 
-.header-container > h1 {
+.header-container>h1 {
   font: bold 28px 'Yanone Kaffeesatz', sans-serif;
 }
 
-.header-container > ul > li {
+.header-container>ul>li {
   margin-top: 11px;
 }
 
@@ -610,7 +625,7 @@ footer > div > ul > li {
   color: rgb(141, 141, 141);
 }
 
-.bottom-caption > a > span {
+.bottom-caption>a>span {
   color: rgb(190, 190, 190);
   font: 12px 'Lexend', sans-serif;
 }
@@ -631,7 +646,7 @@ footer > div > ul > li {
   font-family: 'Hammersmith One', sans-serif;
 }
 
-.funding {
+.container {
   padding: 0 16px;
 }
 
@@ -667,72 +682,73 @@ footer > div > ul > li {
 /*  ***********************
         MEDIA QUERIES
     *********************** */
+
 @media only screen and (min-width: 768px) {
+  .list-item {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .img-li {
+    height: 100%;
+    width: 100%;
+  }
+
+  .grid-md {
+    display: grid;
+  }
   .font-def {
     font-weight: 700;
     font-size: 40px;
     margin-bottom: 15px;
     font-family: 'Hammersmith One', sans-serif;
   }
-
   .bg-container {
     height: 315px;
     background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.48), rgba(0, 0, 0, 1)), url(binoculars-looking-at-ocean.jpg);
   }
-
   .separator {
     display: inline;
     padding: 0 3px;
   }
-
   .flex-md {
     display: flex;
   }
-
   .col-30x70 {
     grid-template-columns: 70% 30%;
   }
-
   .col-70x30-md {
     grid-template-columns: 70% 30%;
   }
-
   .col-2-md {
     grid-template-columns: auto auto;
     column-gap: 16px;
     row-gap: 16px;
   }
-
   .col-3-md {
     grid-template-columns: auto auto auto;
     column-gap: 16px;
     row-gap: 16px;
   }
-
   .show-md {
     display: block;
   }
-
   .hide-md {
     display: none;
   }
-
   .header-clearance {
     margin-top: 112px;
   }
-
   .standalone {
     margin: 0;
     height: 378px;
   }
-
   .card-title {
     font-weight: 700;
     font-size: 40px;
     margin-bottom: 15px;
     font-family: 'Hammersmith One', sans-serif;
   }
-
   .card-title2 {
     font-weight: 700;
     font-size: 20px;
@@ -745,45 +761,36 @@ footer > div > ul > li {
   .col-fund-list {
     grid-template-columns: 70% 30%;
   }
-
   .show-lg {
     display: block;
   }
-
   .col-3-lg {
     grid-template-columns: auto auto auto;
   }
-
   .col-4-lg {
     grid-template-columns: auto auto auto auto;
     column-gap: 16px;
   }
-
   .col-70x30-lg {
     grid-template-columns: 70% 30%;
   }
-
   .bg-img {
     background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.48), rgba(0, 0, 0, 1)), url(binoculars-looking-at-ocean.jpg);
   }
-
   .bg-container {
     height: 315px;
     background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.48), rgba(0, 0, 0, 1)), url(binoculars-looking-at-ocean.jpg);
   }
-
   .card-title {
     font-weight: 700;
     font-size: 56px;
     line-height: 60px;
   }
-
   .card-title2 {
     font-weight: 700;
     line-height: 25px;
     font-size: 28px;
   }
-
   .main-article-date {
     color: white;
   }
