--- a/style/style.css
+++ b/style/style.css
@@ -26,14 +26,14 @@ li {
   margin: 0;
 }
 
-footer > div > ul > li {
+footer>div>ul>li {
   padding: 5px;
 }
 
-.news-box > li {
-  list-style-position: inside;
+.news-box>li {
+  /* list-style-position: inside; */
+  padding: 12px 0;
   list-style-type: circle;
-  height: 32px;
   border-bottom: 1px solid rgb(238, 238, 238);
 }
 
@@ -98,7 +98,7 @@ h4 {
   padding: 16px;
 }
 
-.hamburger > div {
+.hamburger>div {
   width: 20px;
   height: 2px;
   background-color: red;
@@ -412,7 +412,7 @@ a {
   text-decoration: none;
 }
 
-.footer-info > a {
+.footer-info>a {
   color: #aaa;
   margin: 0 2px;
 }
@@ -480,8 +480,7 @@ footer h3 {
   white-space: nowrap;
 }
 
-.space li,
-.post-header * {
+.space li, .post-header * {
   padding: 0 16px;
 }
 
@@ -501,7 +500,7 @@ footer h3 {
   justify-content: center;
 }
 
-.footer-social > ul {
+.footer-social>ul {
   display: flex;
   flex-wrap: wrap;
   padding-inline-start: 0;
@@ -511,7 +510,7 @@ footer h3 {
   justify-content: center;
 }
 
-.footer-social > ul > li {
+.footer-social>ul>li {
   margin: 3px;
 }
 
@@ -551,7 +550,7 @@ footer h3 {
   display: inline-block;
 }
 
-.footer-about > span > a > img {
+.footer-about>span>a>img {
   height: 9px;
 }
 
@@ -597,7 +596,7 @@ footer h3 {
   overflow: hidden;
 }
 
-.pad-left > h4 {
+.pad-left>h4 {
   margin: 0;
   margin-block-end: 0;
   margin-block-start: 0;
@@ -657,11 +656,11 @@ footer h3 {
   margin-bottom: 24px;
 }
 
-.header-container > h1 {
+.header-container>h1 {
   font: bold 28px 'Yanone Kaffeesatz', sans-serif;
 }
 
-.header-container > ul > li {
+.header-container>ul>li {
   margin-top: 11px;
 }
 
@@ -672,7 +671,7 @@ footer h3 {
   color: rgb(141, 141, 141);
 }
 
-.bottom-caption > a > span {
+.bottom-caption>a>span {
   color: rgb(190, 190, 190);
   font: 12px 'Lexend', sans-serif;
 }
@@ -706,7 +705,7 @@ footer h3 {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  margin-top: 1px;
+  background-color: rgb(255, 235, 231)
 }
 
 .img-latest-fork {
@@ -749,13 +748,17 @@ footer h3 {
   justify-content: space-between;
 }
 
-.news-box > li::marker {
+.news-box {
+  padding-left: 18px;
+}
+
+.news-box>li::marker {
   color: #ff4322;
   margin: 0;
 }
 
-.news-box > li > h4 {
-  padding: 6px 0 6px 14px;
+.news-box>li>h4 {
+  /* padding: 6px 0 6px 14px; */
   font-size: 13px;
   color: #555;
 }
@@ -764,13 +767,14 @@ footer h3 {
   margin-top: 40px;
 }
 
-.latest-deals > div > h2 {
+.latest-deals>div>h2 {
   margin-block-start: 0;
 }
 
-.latest-deals > div > span {
+.latest-deals>div>span {
   color: #ff4322;
 }
+
 /*  ***********************
         MEDIA QUERIES
     *********************** */
@@ -780,74 +784,59 @@ footer h3 {
     display: flex;
     flex-direction: column;
   }
-
   .img-li {
     height: 100%;
     width: 100%;
   }
-
   .grid-md {
     display: grid;
   }
-
   .font-def {
     font-weight: 700;
     font-size: 40px;
     margin-bottom: 15px;
     font-family: 'Hammersmith One', sans-serif;
   }
-
   .bg-container {
     height: 315px;
     background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.48), rgba(0, 0, 0, 1)), url(binoculars-looking-at-ocean.jpg);
   }
-
   .separator {
     display: inline;
     padding: 0 3px;
   }
-
   .flex-md {
     display: flex;
   }
-
   .col-30x70 {
     grid-template-columns: 70% 30%;
   }
-
   .col-70x30-md {
     grid-template-columns: 70% 30%;
   }
-
   .col-2-md {
     grid-template-columns: auto auto;
     column-gap: 16px;
     row-gap: 16px;
   }
-
   .col-3-md {
     grid-template-columns: auto auto auto;
     column-gap: 16px;
     row-gap: 16px;
   }
-
   .show-md {
     display: block;
   }
-
   .hide-md {
     display: none;
   }
-
   .header-clearance {
     margin-top: 112px;
   }
-
   .standalone {
     margin: 0;
     height: 378px;
   }
-
   .card-title {
     margin-block-start: 0;
     font-weight: 700;
@@ -855,7 +844,6 @@ footer h3 {
     margin-bottom: 15px;
     font-family: 'Hammersmith One', sans-serif;
   }
-
   .card-title2 {
     font-weight: 700;
     font-size: 20px;
@@ -868,45 +856,36 @@ footer h3 {
   .col-fund-list {
     grid-template-columns: 70% 30%;
   }
-
   .show-lg {
     display: block;
   }
-
   .col-3-lg {
     grid-template-columns: auto auto auto;
   }
-
   .col-4-lg {
     grid-template-columns: auto auto auto auto;
     column-gap: 16px;
   }
-
   .col-70x30-lg {
     grid-template-columns: 70% 30%;
   }
-
   .bg-img {
     background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.48), rgba(0, 0, 0, 1)), url(binoculars-looking-at-ocean.jpg);
   }
-
   .bg-container {
     height: 315px;
     background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.48), rgba(0, 0, 0, 1)), url(binoculars-looking-at-ocean.jpg);
   }
-
   .card-title {
     font-weight: 700;
     font-size: 56px;
     line-height: 60px;
   }
-
   .card-title2 {
     font-weight: 700;
     line-height: 25px;
     font-size: 28px;
   }
-
   .main-article-date {
     color: white;
   }
