--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,11 @@ html {
   font-family: ARS Maquette, "Helvetica Neue", Arial, sans-serif;
 }
 
+body {
+  width: 100%;
+  box-sizing: border-box;
+}
+
 header {
   position: fixed;
   top: 0;
@@ -26,11 +31,26 @@ li {
   margin: 0;
 }
 
-footer>div>ul>li {
+footer > div > ul > li {
   padding: 5px;
 }
 
-.news-box>li {
+.svg {
+  position: fixed;
+  bottom: 0;
+  right: 20px;
+}
+
+.svg svg {
+  width: 30px;
+  height: 30px;
+  color: #fff;
+  background-color: blue;
+  padding: 3px;
+  fill: #fff;
+}
+
+.news-box > li {
   /* list-style-position: inside; */
   padding: 12px 0;
   list-style-type: circle;
@@ -98,7 +118,7 @@ h4 {
   padding: 16px;
 }
 
-.hamburger>div {
+.hamburger > div {
   width: 20px;
   height: 2px;
   background-color: red;
@@ -412,7 +432,7 @@ a {
   text-decoration: none;
 }
 
-.footer-info>a {
+.footer-info > a {
   color: #aaa;
   margin: 0 2px;
 }
@@ -480,7 +500,8 @@ footer h3 {
   white-space: nowrap;
 }
 
-.space li, .post-header * {
+.space li,
+.post-header * {
   padding: 0 16px;
 }
 
@@ -493,14 +514,14 @@ footer h3 {
   height: 161px;
   padding: 40px 0;
   background-color: #131313;
-  margin: auto;
+  margin: 70px auto auto auto;
   border-bottom: 1px solid #333;
   box-sizing: border-box;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.footer-social>ul {
+.footer-social > ul {
   display: flex;
   flex-wrap: wrap;
   padding-inline-start: 0;
@@ -510,7 +531,7 @@ footer h3 {
   justify-content: center;
 }
 
-.footer-social>ul>li {
+.footer-social > ul > li {
   margin: 3px;
 }
 
@@ -550,7 +571,7 @@ footer h3 {
   display: inline-block;
 }
 
-.footer-about>span>a>img {
+.footer-about > span > a > img {
   height: 9px;
 }
 
@@ -596,7 +617,7 @@ footer h3 {
   overflow: hidden;
 }
 
-.pad-left>h4 {
+.pad-left > h4 {
   margin: 0;
   margin-block-end: 0;
   margin-block-start: 0;
@@ -656,11 +677,11 @@ footer h3 {
   margin-bottom: 24px;
 }
 
-.header-container>h1 {
+.header-container > h1 {
   font: bold 28px 'Yanone Kaffeesatz', sans-serif;
 }
 
-.header-container>ul>li {
+.header-container > ul > li {
   margin-top: 11px;
 }
 
@@ -671,7 +692,7 @@ footer h3 {
   color: rgb(141, 141, 141);
 }
 
-.bottom-caption>a>span {
+.bottom-caption > a > span {
   color: rgb(190, 190, 190);
   font: 12px 'Lexend', sans-serif;
 }
@@ -705,7 +726,7 @@ footer h3 {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  background-color: rgb(255, 235, 231)
+  background-color: rgb(255, 235, 231);
 }
 
 .img-latest-fork {
@@ -752,13 +773,12 @@ footer h3 {
   padding-left: 18px;
 }
 
-.news-box>li::marker {
+.news-box > li::marker {
   color: #ff4322;
   margin: 0;
 }
 
-.news-box>li>h4 {
-  /* padding: 6px 0 6px 14px; */
+.news-box > li > h4 {
   font-size: 13px;
   color: #555;
 }
@@ -767,11 +787,11 @@ footer h3 {
   margin-top: 40px;
 }
 
-.latest-deals>div>h2 {
+.latest-deals > div > h2 {
   margin-block-start: 0;
 }
 
-.latest-deals>div>span {
+.latest-deals > div > span {
   color: #ff4322;
 }
 
@@ -779,64 +799,75 @@ footer h3 {
         MEDIA QUERIES
     *********************** */
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 769px) {
   .list-item {
     display: flex;
     flex-direction: column;
   }
+
   .img-li {
     height: 100%;
     width: 100%;
   }
+
   .grid-md {
     display: grid;
   }
+
   .font-def {
     font-weight: 700;
     font-size: 40px;
     margin-bottom: 15px;
     font-family: 'Hammersmith One', sans-serif;
   }
+
   .bg-container {
     height: 315px;
     background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.48), rgba(0, 0, 0, 1)), url(binoculars-looking-at-ocean.jpg);
   }
+
   .separator {
     display: inline;
     padding: 0 3px;
   }
+
   .flex-md {
     display: flex;
   }
+
   .col-30x70 {
     grid-template-columns: 70% 30%;
   }
+
   .col-70x30-md {
     grid-template-columns: 70% 30%;
   }
+
   .col-2-md {
     grid-template-columns: auto auto;
-    column-gap: 16px;
-    row-gap: 16px;
   }
+
   .col-3-md {
     grid-template-columns: auto auto auto;
-    column-gap: 16px;
-    row-gap: 16px;
   }
+
   .show-md {
     display: block;
   }
+
   .hide-md {
     display: none;
   }
+
   .header-clearance {
     margin-top: 112px;
   }
+
   .standalone {
     margin: 0;
     height: 378px;
   }
+
   .card-title {
     margin-block-start: 0;
     font-weight: 700;
@@ -844,49 +875,129 @@ footer h3 {
     margin-bottom: 15px;
     font-family: 'Hammersmith One', sans-serif;
   }
+
   .card-title2 {
     font-weight: 700;
     font-size: 20px;
     margin-bottom: 7px;
     font-family: 'Hammersmith One', sans-serif;
   }
+
+  .img-latest-deals {
+    box-sizing: border-box;
+    height: 201px;
+    width: 100%;
+    border-bottom: 1px solid #555;
+    border-right: 1px solid #555;
+    background-size: cover;
+    background-position: 50%;
+    background-image: url("https://wr.perma-archives.org/public/m5zv-q2d6/20210126152647mp_/https://cdnp3.stackassets.com/b34f2af9e9ec3122eb0c0b252532b61f8a08c0ea/store/243275a3bf8c7d20203d2e6e3b9f3664926f9f8913e755d1ae8811aecd9b/sale_25748_primary_image.jpg");
+  }
+
+  .container2 {
+    margin: 0 auto;
+    max-width: 1024px;
+    padding: 0 20px;
+  }
+
+  body {
+    width: 100%;
+  }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1025px) {
   .col-fund-list {
     grid-template-columns: 70% 30%;
   }
+
   .show-lg {
     display: block;
   }
+
   .col-3-lg {
     grid-template-columns: auto auto auto;
   }
+
   .col-4-lg {
     grid-template-columns: auto auto auto auto;
-    column-gap: 16px;
   }
+
   .col-70x30-lg {
     grid-template-columns: 70% 30%;
   }
+
   .bg-img {
     background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.48), rgba(0, 0, 0, 1)), url(binoculars-looking-at-ocean.jpg);
   }
+
   .bg-container {
     height: 315px;
     background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.48), rgba(0, 0, 0, 1)), url(binoculars-looking-at-ocean.jpg);
   }
+
   .card-title {
     font-weight: 700;
     font-size: 56px;
     line-height: 60px;
   }
+
   .card-title2 {
     font-weight: 700;
     line-height: 25px;
     font-size: 28px;
   }
+
   .main-article-date {
     color: white;
+  }
+
+  .img-latest-deals {
+    margin-right: 10px;
+    box-sizing: border-box;
+    height: 201px;
+    width: 270px;
+    border-bottom: 1px solid #555;
+    border-right: 1px solid #555;
+    background-size: cover;
+    background-position: 50%;
+    background-image: url("https://wr.perma-archives.org/public/m5zv-q2d6/20210126152647mp_/https://cdnp3.stackassets.com/b34f2af9e9ec3122eb0c0b252532b61f8a08c0ea/store/243275a3bf8c7d20203d2e6e3b9f3664926f9f8913e755d1ae8811aecd9b/sale_25748_primary_image.jpg");
+  }
+
+  .latest-deals {
+    box-sizing: border-box;
+    position: relative;
+    margin: 0 300px 0 20px;
+  }
+
+  .col-4-lg2 {
+    grid-template-columns: 294px 294px 294px 294px;
+    column-gap: 0;
+    row-gap: 0;
+  }
+
+  .container2 {
+    margin: 0 auto;
+    max-width: 1192px;
+    padding: 0 20px;
+  }
+
+  body {
+    width: 100%;
+  }
+
+  .svg {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+  }
+
+  .svg svg {
+    width: 45px;
+    height: 45px;
+    color: #fff;
+    background-color: blue;
+    border-radius: 50%;
+    padding: 3px;
+    fill: #fff;
   }
 }
