--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,14 @@ a {
   cursor: pointer;
 }
 
+.category-link {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 body {
   width: 100%;
   box-sizing: border-box;
@@ -79,6 +87,8 @@ footer > div > ul > li {
 
 .bg-container {
   height: 315px;
+  background-repeat: no-repeat;
+  background-position: center;
   background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.48), rgba(0, 0, 0, 1)), url(binoculars-looking-at-ocean.jpg);
 }
 
